[tool.poetry]
name = "frrbot"
version = "0.1.0"
description = "GitHub housekeeping bot for FRRouting"
authors = ["Quentin Young <qlyoung@qlyoung.net>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
APScheduler = "^3.7.0"
Flask = "^1.1.2"
dateparser = "^1.0.0"
PyGithub = "^1.54.1"
SQLAlchemy = "^1.3.23"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
