[tool.poetry]
name = "frrbot"
version = "0.1.0"
description = "GitHub housekeeping bot for FRRouting"
authors = ["Quentin Young <qlyoung@qlyoung.net>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.6"
APScheduler = "^3.7.0"
Flask = "^2.0.0"
dateparser = "^1.0.0"
PyGithub = "^1.54.1"
SQLAlchemy = "^1.3.23"
PyYAML = "^5.4.1"
uWSGI = "^2.0.19.0"
pylint = "^2.7.2"
Flask-GitHubApplication = "^1.2.0"
ghapi = "^0.1.19"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 88
disable = "C0114, R0911, R0912, R0914"
